# 7552-taller-prog-2-2015-C1

./: .gitignore  .travis.yml  CHANGELOG.md  INSTALL.md  README.md
doc/: REST.txt  (+2 more)
server/: CMakeLists.txt  Doxyfile  generate_ssl_certificates.sh  test.sh
server/doc/html/: README_8md_source.html  access__token_8cpp_source.html  access__token_8h_source.html  annotated.html  auth__node_8cpp_source.html  auth__node_8h_source.html  avatar_8cpp_source.html  avatar_8h_source.html  avatar__node_8cpp_source.html  avatar__node_8h_source.html  bin2hex_8cpp_source.html  bin2hex_8h_source.html  broadcast__node_8cpp_source.html  broadcast__node_8h_source.html  checkin_8cpp_source.html  checkin_8h_source.html  checkin__node_8cpp_source.html  checkin__node_8h_source.html  classAccessToken-members.html  classAccessToken.html  classAuthNode-members.html  classAuthNode.html  classAvatar-members.html  classAvatar.html  classAvatarNode-members.html  classAvatarNode.html  classBroadcastNode-members.html  classBroadcastNode.html  classCheckin-members.html  classCheckin.html  classCheckinNode-members.html  classCheckinNode.html  classContactList-members.html  classContactList.html  classContactsNode-members.html  classContactsNode.html  classDBManager-members.html  classDBManager.html  classDbComparator-members.html  classDbComparator.html  (+242 more)
server/doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+39 more)
server/src/: Doxyfile  coverage.cpp  main.cpp  server_config.h.in  wa_server.cpp  wa_server.h
server/src/db/: access_token.cpp  access_token.h  avatar.cpp  avatar.h  checkin.cpp  checkin.h  contact_list.cpp  contact_list.h  contact_list_merge_operator.cpp  contact_list_merge_operator.h  db_comparator.cpp  db_comparator.h  db_entity.cpp  db_entity.h  db_iterator.h  db_list.cpp  db_list.h  db_manager.cpp  db_manager.h  default_avatar.cpp  default_avatar.h  list_merge_operator.cpp  list_merge_operator.h  message.cpp  message.h  notification.cpp  notification.h  profile.cpp  profile.h  serializer.cpp  serializer.h  suscriber_list.cpp  suscriber_list.h  user.cpp  user.h  user_merge_operator.cpp  user_merge_operator.h
server/src/doc/html/: README_8md_source.html  access__token_8cpp_source.html  access__token_8h_source.html  annotated.html  auth__node_8cpp_source.html  auth__node_8h_source.html  bin2hex_8cpp_source.html  bin2hex_8h_source.html  classAccessToken-members.html  classAccessToken.html  classAuthNode-members.html  classAuthNode.html  classDBManager-members.html  classDBManager.html  classDbComparator-members.html  classDbComparator.html  classLog-members.html  classLog.html  classLog_1_1VectorStr-members.html  classLog_1_1VectorStr.html  classMessage-members.html  classMessage.html  classMessage_1_1MessageIterator-members.html  classMessage_1_1MessageIterator.html  classMessagesNode-members.html  classMessagesNode.html  classMgConnection-members.html  classMgConnection.html  classMgServer-members.html  classMgServer.html  classNotFoundNode-members.html  classNotFoundNode.html  classNotification-members.html  classNotification.html  classNotificationNode-members.html  classNotificationNode.html  classNotification_1_1NotificationIterator-members.html  classNotification_1_1NotificationIterator.html  classRootNode-members.html  classRootNode.html  (+124 more)
server/src/doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  (+30 more)
server/src/doc/latex/: refman.tex
server/src/mg/: mg_connection.cpp  mg_connection.h  mg_server.cpp  mg_server.h
server/src/mg/mongoose/: mongoose.c  mongoose.h
server/src/node/: wa_method_node.cpp  wa_method_node.h  wa_node.cpp  wa_node.h  wa_parent_node.cpp  wa_parent_node.h  wa_str_node.cpp  wa_str_node.h
server/src/rest/: auth_node.cpp  auth_node.h  avatar_node.cpp  avatar_node.h  broadcast_node.cpp  broadcast_node.h  checkin_node.cpp  checkin_node.h  contacts_node.cpp  contacts_node.h  messages_node.cpp  messages_node.h  not_found_node.cpp  not_found_node.h  notification_node.cpp  notification_node.h  profile_node.cpp  profile_node.h  root_node.cpp  root_node.h  signup_node.cpp  signup_node.h  user_node.cpp  user_node.h  wa_method_auth_node.cpp  wa_method_auth_node.h
server/src/util/: bin2hex.cpp  bin2hex.h  has_suffix.h  md5.cpp  md5.h  notifier.cpp  notifier.h  random_number.h  serializer.cpp  serializer.h
server/src/wa/: wa_node.cpp  wa_node.h  wa_parent_node.cpp  wa_parent_node.h  wa_server.h
server/src/wa/node/: wa_node.h  wa_parent_node.cpp  wa_str_node.h
server/src/wa/rest/: root_node.h  signup_node.cpp
server/test/: CMakeLists.txt  test.cpp
server/test/db/: access_token.cpp  avatar.cpp  checkin.cpp  contact_list.cpp  db_comparator.cpp  helper.cpp  helper.h  message.cpp  notification.cpp  profile.cpp  serializer.cpp  suscriber_list.cpp  user.cpp
server/test/node/: wa_method_node.cpp  wa_node.cpp  wa_parent_node.cpp  wa_str_node.cpp
server/test/rest/: not_found_node.cpp
server/test/util/: bin2hex.cpp  has_suffix.cpp  md5.cpp  notifier.cpp  serializer.cpp
server/test_rest/: auth.js  broadcast.js  checkin.js  contact.js  messages.js  package.json  profile.js  profile_spec.js  run.sh  signup.js  signup_spec.js
server/test_rest/util/: default_vars.js
(+280 files in other folders)
