# http://www.cmake.org/cmake-tutorial/

cmake_minimum_required (VERSION 2.6)
project (Test)

list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../CMake)

macro (add_executable _name)
	# invoke built-in add_executable
	_add_executable(${ARGV})
	if (TARGET ${_name})
		target_link_libraries(${_name} Main)
	endif()
endmacro()

enable_testing()

add_library(Main STATIC main.cpp ../src/util/log.cpp)

add_executable(util_bin2hex ${MAIN} util/bin2hex.cpp ../src/util/bin2hex.cpp)
add_executable(util_md5 ${MAIN} util/md5.cpp ../src/util/md5.cpp ../src/util/bin2hex.cpp)
add_executable(util_serializer ${MAIN} util/serializer.cpp ../src/util/serializer.cpp)
add_executable(wa_node ${MAIN} node/wa_node.cpp ../src/node/wa_node.cpp)
add_executable(wa_str_node ${MAIN} node/wa_str_node.cpp ../src/node/wa_str_node.cpp ../src/node/wa_node.cpp)
add_executable(not_found_node ${MAIN} rest/not_found_node.cpp ../src/rest/not_found_node.cpp ../src/node/wa_node.cpp)
add_executable(db_comparator ${MAIN} db/db_comparator.cpp ../src/db/db_comparator.cpp)
add_executable(db_user ${MAIN} db/user.cpp ../src/db/user.cpp ../src/db/db_entity.cpp ../src/util/md5.cpp ../src/util/bin2hex.cpp)
add_executable(db_notification ${MAIN} db/notification.cpp ../src/db/db_entity.cpp ../src/db/notification.cpp ../src/util/serializer.cpp ../src/util/bin2hex.cpp ../src/db/db_comparator.cpp)
add_executable(db_message ${MAIN} db/message.cpp ../src/db/db_entity.cpp ../src/db/message.cpp ../src/util/serializer.cpp ../src/util/bin2hex.cpp ../src/db/db_comparator.cpp)
add_executable(db_contact_list ${MAIN} db/contact_list.cpp ../src/db/db_entity.cpp ../src/db/db_list.cpp ../src/db/contact_list.cpp ../src/db/list_merge_operator.cpp ../src/util/serializer.cpp ../src/db/profile.cpp)
add_executable(db_suscriber_list ${MAIN} db/suscriber_list.cpp ../src/db/db_entity.cpp ../src/db/db_list.cpp ../src/db/suscriber_list.cpp ../src/db/list_merge_operator.cpp ../src/util/serializer.cpp)
add_executable(db_avatar ${MAIN} db/avatar.cpp ../src/db/db_entity.cpp ../src/db/avatar.cpp ../src/util/serializer.cpp)
add_executable(db_profile ${MAIN} db/profile.cpp ../src/db/db_entity.cpp ../src/db/profile.cpp ../src/util/serializer.cpp)
add_executable(db_checkin ${MAIN} db/checkin.cpp ../src/db/db_entity.cpp ../src/db/checkin.cpp ../src/util/serializer.cpp)
add_executable(db_access_token ${MAIN} db/access_token.cpp ../src/db/db_entity.cpp ../src/db/access_token.cpp ../src/util/serializer.cpp ../src/util/random_number.cpp ../src/util/md5.cpp ../src/util/bin2hex.cpp)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
if(COMPILER_SUPPORTS_CXX11)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
else()
	message(FATAL_ERROR "El compilador ${CMAKE_CXX_COMPILER} no tiene soporte para C++11. Por favor usar otro compilador.")
endif()

CHECK_CXX_COMPILER_FLAG("-pthread" COMPILER_SUPPORTS_PTHREAD)
if(COMPILER_SUPPORTS_PTHREAD)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -DMONGOOSE_ENABLE_THREADS")
else()
	message(FATAL_ERROR "El compilador ${CMAKE_CXX_COMPILER} no tiene soporte para pthreads. Por favor usar otro compilador.")
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -fprofile-arcs -ftest-coverage -g -O0")

find_package(RocksDB)
if(ROCKSDB_FOUND)
	include_directories("${ROCKSDB_INCLUDE_DIRS}")
	target_link_libraries(db_user ${ROCKSDB_LIBRARIES})
	target_link_libraries(db_comparator ${ROCKSDB_LIBRARIES})
	target_link_libraries(db_notification ${ROCKSDB_LIBRARIES})
	target_link_libraries(db_message ${ROCKSDB_LIBRARIES})
	target_link_libraries(db_contact_list ${ROCKSDB_LIBRARIES})
	target_link_libraries(db_suscriber_list ${ROCKSDB_LIBRARIES})
	target_link_libraries(db_avatar ${ROCKSDB_LIBRARIES})
	target_link_libraries(db_profile ${ROCKSDB_LIBRARIES})
	target_link_libraries(db_checkin ${ROCKSDB_LIBRARIES})
	target_link_libraries(db_access_token ${ROCKSDB_LIBRARIES})
else()
	message(FATAL_ERROR "No se encuentra RocksDB")
endif()

include_directories("${PROJECT_BINARY_DIR}")

# Tests
add_test(UtilBin2Hex util_bin2hex --force-colour)
add_test(UtilMd5 util_md5 --force-colour)
add_test(UtilSerializer util_serializer --force-colour)
add_test(WANode wa_node --force-colour)
add_test(WAStrNode wa_str_node --force-colour)
add_test(NotFoundNode not_found_node --force-colour)
add_test(DbComparator db_comparator --force-colour)
add_test(DbUser db_user --force-colour)
add_test(DbNotification db_notification --force-colour)
add_test(DbMessage db_message --force-colour)
add_test(DbContactList db_contact_list --force-colour)
add_test(DbSuscriberList db_suscriber_list --force-colour)
add_test(DbAvatar db_avatar --force-colour)
add_test(DbProfile db_profile --force-colour)
add_test(DbCheckin db_checkin --force-colour)
add_test(DbAccessToken db_access_token --force-colour)
